<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.example.naat_practica.utils.Converter" />

        <variable
            name="viewModel"
            type="com.example.naat_practica.ui.main.mvvm.view_model.MainVM" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/drawable_dialog"
        android:padding="32dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_logo_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_label_will_recharge"
            android:textColor="@color/white"
            android:textSize="24dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_logo"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginTop="16dp"
            android:src="@{Converter.getDrawableFromId(viewModel.item.icon) != null ? @drawable/ic_logo : Converter.getDrawableFromId(viewModel.item.icon)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_logo_label"
            tools:src="@drawable/ic_logo" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_phone_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/text_label_phone_number"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_logo" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewModel.phone}"
            android:textColor="@color/white"
            android:textSize="32dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_phone_label"
            tools:text="5520302030" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_amount_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/text_label_recharge_amount"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_phone" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{Converter.amountToString(viewModel.amount)}"
            android:textColor="@color/white"
            android:textSize="32dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_amount_label"
            tools:text="$200.00" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/drawable_button"
            android:layout_marginRight="8dp"
            android:layout_marginTop="24dp"
            android:text="@string/text_button_cancel"
            android:textColor="@color/white"
            app:layout_constraintEnd_toStartOf="@id/btn_accept"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_amount" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_accept"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/drawable_button"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="24dp"
            android:text="@string/text_button_accept"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_cancel"
            app:layout_constraintTop_toBottomOf="@id/tv_amount" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>