<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.example.naat_practica.utils.Converter" />

        <variable
            name="listener"
            type="com.example.naat_practica.ui.main.mvvm.views.fragments.recharge.RechargeFragment" />

        <variable
            name="viewModel"
            type="com.example.naat_practica.ui.main.mvvm.view_model.MainVM" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackgroundGray">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorAccent"
                    android:minHeight="?attr/actionBarSize"
                    android:theme="?attr/actionBarTheme"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    app:srcCompat="@drawable/ic_logo"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:padding="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_bar">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@{Converter.getDrawableFromId(viewModel.item.icon) == null ? @drawable/ic_logo : Converter.getDrawableFromId(viewModel.item.icon)}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/ic_logo"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_icon_cel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_phone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/til_phone"
                app:layout_constraintTop_toTopOf="@id/til_phone"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="32dp"
                android:hint="@string/text_hint_phone"
                android:textColorHint="@color/white"
                app:hintTextColor="@color/white"
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/iv_icon_cel"
                app:layout_constraintTop_toBottomOf="@id/iv_logo" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiePhone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:afterTextChanged="@{() -> viewModel.afterPhoneTextChanged(tiePhone)}"
                    android:digits="0123456789"
                    android:inputType="number"
                    android:maxLength="10"
                    android:text="@{viewModel.phone}"
                    android:textColor="@color/white"/>

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_icon_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_money"
                app:layout_constraintBottom_toBottomOf="@id/til_amount"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/til_amount" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_amount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:hint="@string/text_hint_amount"
                android:textColorHint="@color/white"
                app:hintTextColor="@color/white"
                app:layout_constraintVertical_bias="0.0"
                app:layout_constraintBottom_toTopOf="@id/btn_continue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/iv_icon_amount"
                app:layout_constraintTop_toBottomOf="@id/til_phone" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tieAmount"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:afterTextChanged="@{() -> viewModel.afterAmountTextChanged(tieAmount)}"
                    android:digits="0123456789"
                    android:inputType="number"
                    android:maxLength="9"
                    android:text="@{Converter.amountToString(viewModel.amount)}"
                    android:textColor="@color/white"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_continue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/drawable_button"
                android:layout_marginBottom="32dp"
                android:onClick="@{listener::onClick}"
                android:text="@string/text_btn_continue"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>